--- a/styles/main.css
+++ b/styles/main.css
@@ -40,11 +40,10 @@ a {
         margin-left: 10px; }
         .list .item .actions .delete:hover {
           color: #f28888; }
-    .list .item .editing-item .actions {
+    .list .item.editing-item .actions {
       margin-top: 17px; }
   .list .edited label:after {
     content: " edited";
-    /*this will mark the todo as edited when it evaluates to true and has been edited*/
     text-transform: uppercase;
     color: #a7b9c4;
     font-size: 14px;
@@ -55,7 +54,7 @@ a {
   .list .add {
     padding: 25px 0 27px 25px; }
 
-/*input[type="checkbox"] {
+input[type="checkbox"] {
     display:none;
 }
 input[type="checkbox"] + span {
@@ -69,4 +68,4 @@ input[type="checkbox"] + span {
 }
 input[type="checkbox"]:checked + span {
     background:url(checkbox-filled.svg) left top no-repeat;
-}*/
+}
